--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,16 @@ jobs:
           script: |
             # Install Docker if not present
             if ! command -v docker >/dev/null; then
-              curl -fsSL https://get.docker.com | sudo sh
-              sudo usermod -aG docker $USER
+              sudo yum install -y amazon-linux-extras
+              sudo amazon-linux-extras enable docker
+              sudo yum install docker -y
+              sudo service docker start
+              sudo usermod -aG docker ec2-user
+            fi
+
+            # Install Git if not present
+            if ! command -v git >/dev/null; then
+              sudo yum install git -y
             fi
 
             # Install Docker Compose if not present
@@ -33,11 +41,11 @@ jobs:
             fi
 
             # Pull the latest code
+            mkdir -p ~/dj-dockerservice
             cd ~/dj-dockerservice || git clone https://github.com/ALASHI1/django-mircoservice.git ~/dj-dockerservice
-            cd ~/dj-dockerservice
             git pull origin main
 
             # Run the app
             docker-compose down
             docker-compose up -d --build
-          timeout: 60s  # Increase the timeout to handle delays
+          timeout: 2m  # Increase timeout to 2 minutes to handle delays during setup
