--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: terraform/
+        working-directory: terraform
 
     steps:
       - name: ✅ Checkout code
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: ./terraform/tfplan
+          path: tfplan
 
   apply:
     name: Apply Infrastructure (Manual Trigger)
@@ -72,7 +72,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: tfplan
-          path: ./terraform
+          path: .
 
       - name: 🔥 Terraform Apply (Manual Approval Required)
         run: terraform apply -auto-approve tfplan
