--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./terraform
+        working-directory: terraform
 
     steps:
       - name: ✅ Checkout code
