--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,7 +53,7 @@ jobs:
           include-hidden-files: true
 
   apply:
-    name: Apply Infrastructure (Manual Trigger)
+    name: Apply Infrastructure (Main Branch Trigger)
     runs-on: ubuntu-latest
     needs: terraform
     if: github.ref == 'refs/heads/main' # Apply only if changes are pushed to main branch
@@ -85,5 +85,5 @@ jobs:
           name: tfplan
           path: terraform/
 
-      - name: 🔥 Terraform Apply (Manual Approval Required)
+      - name: 🔥 Terraform Apply
         run: terraform apply -auto-approve tfplan
