--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     build: .
     container_name: django_app
     entrypoint: /app/entrypoint.sh
-    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     environment:
       - RUN_MIGRATIONS=True
     volumes:
