--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,5 @@ jobs:
             # Run the app
             cd ~/dj-dockerservice
             docker-compose down
-            docker-compose build --no-cache
-            docker-compose up -d
+            docker-compose up -d --build
           timeout: 2m # Increase timeout to 2 minutes to handle delays during setup
