--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,8 @@ jobs:
 
             # Run the app
             cd ~/dj-dockerservice
-            docker-compose down
+            docker-compose down -v --remove-orphans
+            docker system prune -a --volumes
             docker-compose build --no-cache
             docker-compose up -d
           timeout: 2m # Increase timeout to 2 minutes to handle delays during setup
