--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
             fi
 
             # Clone or pull the latest code
-            if [ ! -d "~/dj-dockerservice/.git" ]; then
+            if [ ! -d "$HOME/dj-dockerservice/.git" ]; then
               echo "Cloning repository..."
               git clone https://github.com/ALASHI1/django-mircoservice.git ~/dj-dockerservice
             else
