--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,6 @@ jobs:
 
             # Run the app
             cd ~/dj-dockerservice
-            docker-compose down -v --remove-orphans
-            docker system prune -a --volumes
-            docker-compose build --no-cache
-            docker-compose up -d
+            docker-compose down
+            docker-compose up -d --build
           timeout: 2m # Increase timeout to 2 minutes to handle delays during setup
