--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,18 @@
-server {
-    listen 80;
-    server_name 13.48.146.116;
+http {
+    server {
+        listen 80;
+        server_name 13.48.146.116;
 
-    location /static/ {
-        alias /app/static/;
-    }
+        location /static/ {
+            alias /app/static/;
+        }
 
-    location / {
-        proxy_pass http://13.48.146.116:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://13.48.146.116:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
