--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,6 @@ jobs:
 
             # Run the app
             cd ~/dj-dockerservice
-            docker-compose down
+            docker-compose down --remove-orphans
             docker-compose up -d --build
           timeout: 2m # Increase timeout to 2 minutes to handle delays during setup
